# Kod-Hekim

./: .env.example  .gitignore  LICENSE  README.md  developer-v4.md  developer.md  post-mvp-roadmap.md
backend/: .dockerignore  Dockerfile  main.py  nixpacks.toml  pyproject.toml
backend/agents/: chief.py  chief_heuristic.py  impact_analyst.py  impact_heuristic.py  issue.py  orchestrator.py  pipeline_limits.py  profiler.py  surgeon.py  surgeon_heuristic.py  types.py
backend/analysis/: ast_parser.py  ast_summary.py  file_walker.py  fix_recipe_validator.py  impact_heuristics.py  issue_focus.py  js_ts_scan.py  languages.py  mode_comparison.py  repo_cloner.py  scan.py  simulation.py
backend/analysis/static_rules/: __init__.py  base.py  circular_import.py  dead_code.py  deep_recursion.py  global_accumulator.py  hardcoded_secret.py  inefficient_string_concat.py  large_payload.py  list_over_generator.py  load_full_file.py  missing_index_hint.py  (+12 more)
backend/api/: analyze.py  badge.py  models.py  report.py  store.py  stream.py
backend/llm/: base.py  cerebras_provider.py  gemini_provider.py  gemini_schema.py  registry.py  safe_json.py  timeout.py
backend/prompts/: chief.md  deep_mode.md  impact_analyst.md  profiler_confirm.md  surgeon.md
backend/tests/: conftest.py  test_api.py  test_chief.py  test_deep_mode.py  test_demo_features.py  test_file_walker.py  test_hardening.py  test_impact_analyst.py  test_issue_focus.py  test_llm.py  test_multilang_scan.py  test_orchestrator.py  test_pipeline.py  test_profiler.py  test_repo_cloner.py  test_static_mode.py  test_surgeon.py
(+42 files in other folders)
