[project]
name = "kodhekim-backend"
version = "0.1.0"
description = "KodHekim — kod sağlığı tanı sistemi (FastAPI backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "gitpython>=3.1.43",
    "tree-sitter==0.25.2",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-python==0.25.0",
    "langgraph>=0.2.50",
    "cerebras-cloud-sdk>=1.20",
    "google-generativeai>=0.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: gerçek ağ erişimi gerektiren testler (opt-in)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
